Creo estructura básica de archivos

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hola Mundo desde GitHub
+<!doctype html>
+<html>
+  <head>
+      <link rel='stylesheet' href='style.css'>
+  </head>
+  <body>
+    <h1>Mi primer GitHub</h1>
+  </body>  
+</html>
